--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "sass": "^1.83.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.15.10"
     }
 }
